[package]
name = "memberlist-reactor"
version = "0.0.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "reactor-I/O async driver for the Sans-I/O memberlist machine (tokio / smol via agnostic)"

[features]
default = ["tcp"]
tcp = ["memberlist-proto/tcp"]
# The shared TLS backend: enables the machine's rustls record layer (caller
# supplies the configs). A crypto-backend feature (tls-rustls-*) adds a provider.
tls = ["memberlist-proto/tls"]
tls-rustls-ring = ["tls", "memberlist-proto/tls-rustls-ring"]
tls-rustls-aws-lc-rs = ["tls", "memberlist-proto/tls-rustls-aws-lc-rs"]
quic = ["memberlist-proto/quic"]
quic-rustls-ring = ["quic", "memberlist-proto/quic-rustls-ring"]
quic-rustls-aws-lc-rs = ["quic", "memberlist-proto/quic-rustls-aws-lc-rs"]
compression-lz4 = ["memberlist-proto/compression-lz4"]
compression-snappy = ["memberlist-proto/compression-snappy"]
compression-zstd = ["memberlist-proto/compression-zstd"]
compression-brotli = ["memberlist-proto/compression-brotli"]
# Gossip-plane (unreliable) checksum backends. Each forwards to the matching
# memberlist-proto backend; checksumming applies to the gossip datagram path
# only, not the reliable stream path (the transport provides integrity there).
checksum-crc32 = ["memberlist-proto/checksum-crc32"]
checksum-xxhash32 = ["memberlist-proto/checksum-xxhash32"]
checksum-xxhash64 = ["memberlist-proto/checksum-xxhash64"]
checksum-xxhash3 = ["memberlist-proto/checksum-xxhash3"]
checksum-murmur3 = ["memberlist-proto/checksum-murmur3"]
encryption-aes-gcm = ["memberlist-proto/encryption-aes-gcm"]
encryption-chacha20-poly1305 = ["memberlist-proto/encryption-chacha20-poly1305"]
cidr = ["memberlist-proto/cidr"]
# Runtime conveniences: pull in the concrete agnostic runtime impls.
tokio = ["agnostic/tokio"]
smol = ["agnostic/smol"]
dns = ["dep:hickory-proto", "dep:resolv-conf"]
# Auto-detect the advertise address from the host's own interfaces (via `getifs`).
getifs = ["dep:getifs", "dep:iprfc"]

[dependencies]
memberlist-proto = { workspace = true, features = ["std"] }
agnostic = { workspace = true, features = ["net"] }
agnostic-lite = { workspace = true }
hostaddr = { workspace = true, features = ["std", "smol_str"] }
smol_str = { workspace = true }
arc-swap = { workspace = true }
bytes = { workspace = true, features = ["std"] }
flume = { workspace = true, default-features = false, features = ["async"] }
futures-channel = { workspace = true }
futures-util = { workspace = true, default-features = false, features = ["std", "async-await-macro"] }
thiserror = { workspace = true }
hickory-proto = { workspace = true, optional = true, default-features = false, features = ["std"] }
resolv-conf = { workspace = true, optional = true }
getifs = { workspace = true, optional = true }
iprfc = { workspace = true, optional = true }

[dev-dependencies]
memberlist-test-suite = { path = "../tests/memberlist-test-suite" }
agnostic = { workspace = true, features = ["net", "tokio", "smol"] }
smol_str = { workspace = true }
futures-util = { workspace = true, default-features = false, features = ["std", "async-await-macro"] }
# QUIC smoke-test fixtures (self-signed cert + quinn_proto configs). Dev-only:
# production callers supply their own QuicOptions.
rcgen = "0.14"
ring = "0.17"
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1"
quinn-proto = { version = "0.11", features = ["rustls-ring"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[[test]]
name = "suite_tcp"
required-features = ["tcp"]

[[test]]
name = "suite_tls"
required-features = ["tls-rustls-ring"]

[[test]]
name = "suite_quic"
required-features = ["quic-rustls-ring"]

[[test]]
name = "quic_smoke"
required-features = ["quic-rustls-ring"]

[[test]]
name = "tls_smoke"
required-features = ["tls-rustls-ring"]

[[test]]
name = "transform"
required-features = ["tcp"]

[[test]]
name = "shutdown_rebind"
required-features = ["tokio", "tcp"]

[[test]]
name = "cidr"
required-features = ["tcp", "cidr"]

[[test]]
name = "cidr_quic"
required-features = ["quic-rustls-ring", "cidr"]
