[package]
name = "memberlist-reactor"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "reactor-I/O async driver for the Sans-I/O memberlist machine (tokio / smol via agnostic)"

[features]
default = ["tcp"]
tcp = ["memberlist-proto/tcp"]
# Emit `tracing` spans around the public driver operations (join / leave / send /
# dial / shutdown) and forward the machine's `tracing` feature.
tracing = ["dep:tracing", "memberlist-proto/tracing"]
# The shared TLS backend: enables the machine's rustls record layer (caller
# supplies the configs). A crypto-backend feature (tls-rustls-*) adds a provider.
tls = ["memberlist-proto/tls"]
tls-rustls-ring = ["tls", "memberlist-proto/tls-rustls-ring"]
tls-rustls-aws-lc-rs = ["tls", "memberlist-proto/tls-rustls-aws-lc-rs"]
quic = ["memberlist-proto/quic"]
quic-rustls-ring = ["quic", "memberlist-proto/quic-rustls-ring"]
quic-rustls-aws-lc-rs = ["quic", "memberlist-proto/quic-rustls-aws-lc-rs"]
lz4 = ["memberlist-proto/lz4"]
snappy = ["memberlist-proto/snappy"]
zstd = ["memberlist-proto/zstd"]
brotli = ["memberlist-proto/brotli"]
# Gossip-plane (unreliable) checksum backends. Each forwards to the matching
# memberlist-proto backend; checksumming applies to the gossip datagram path
# only, not the reliable stream path (the transport provides integrity there).
crc32 = ["memberlist-proto/crc32"]
xxhash32 = ["memberlist-proto/xxhash32"]
xxhash64 = ["memberlist-proto/xxhash64"]
xxhash3 = ["memberlist-proto/xxhash3"]
murmur3 = ["memberlist-proto/murmur3"]
aes-gcm = ["memberlist-proto/aes-gcm"]
chacha20-poly1305 = ["memberlist-proto/chacha20-poly1305"]
cidr = ["memberlist-proto/cidr"]
# Runtime conveniences: pull in the concrete agnostic runtime impls.
tokio = ["agnostic/tokio"]
smol = ["agnostic/smol"]
dns = ["dep:hickory-proto", "dep:resolv-conf"]
# Auto-detect the advertise address from the host's own interfaces (via `getifs`).
getifs = ["dep:getifs", "dep:iprfc"]

# Optional config layering on the driver `*Options` types. `serde` adds gated
# Serialize/Deserialize (config files, round-trip); `clap` adds gated
# `clap::Args` derives (CLI flags + env vars). Both leave the default build
# untouched. `serde` uses `humantime-serde` for the `Duration` fields and
# forwards the machine's `serde` (the composed `*Options` carry their own
# derives); `clap` is std-only and uses `humantime` to parse `Duration` flags.
serde = ["dep:serde", "dep:humantime-serde", "memberlist-proto/serde"]
clap = ["dep:clap", "dep:humantime", "memberlist-proto/clap"]

[dependencies]
memberlist-proto = { workspace = true, features = ["std"] }
rand = { workspace = true, features = ["std", "std_rng", "sys_rng"] }
agnostic = { workspace = true, features = ["net"] }
agnostic-lite.workspace = true
hostaddr = { workspace = true, features = ["std", "smol_str"] }
smol_str.workspace = true
arc-swap.workspace = true
bytes = { workspace = true, features = ["std"] }
flume = { workspace = true, default-features = false, features = ["async"] }
futures-channel.workspace = true
futures-util = { workspace = true, default-features = false, features = [
  "std",
  "async-await-macro",
] }
thiserror.workspace = true
tracing = { workspace = true, optional = true }
hickory-proto = { workspace = true, optional = true, default-features = false, features = [
  "std",
] }
resolv-conf = { workspace = true, optional = true }
getifs = { workspace = true, optional = true }
iprfc = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
humantime-serde = { workspace = true, optional = true }
humantime = { workspace = true, optional = true }
clap = { workspace = true, optional = true }

[dev-dependencies]
memberlist-test-suite = { path = "../tests/memberlist-test-suite" }
serde_json.workspace = true
agnostic = { workspace = true, features = ["net", "tokio", "smol"] }
smol_str.workspace = true
futures-util = { workspace = true, default-features = false, features = [
  "std",
  "async-await-macro",
] }
# QUIC smoke-test fixtures (self-signed cert + quinn_proto configs). Dev-only:
# production callers supply their own QuicOptions.
rcgen = "0.14"
ring = "0.17"
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1"
quinn-proto = { version = "0.11", features = ["rustls-ring"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[[test]]
name = "suite_tcp"
required-features = ["tcp"]

[[test]]
name = "suite_tls"
required-features = ["tls-rustls-ring"]

[[test]]
name = "suite_quic"
required-features = ["quic-rustls-ring"]

[[test]]
name = "quic_smoke"
required-features = ["quic-rustls-ring"]

[[test]]
name = "tls_smoke"
required-features = ["tls-rustls-ring"]

[[test]]
name = "transform"
required-features = ["tcp"]

[[test]]
name = "shutdown_rebind"
required-features = ["tokio", "tcp"]

[[test]]
name = "cidr"
required-features = ["tcp", "cidr"]

[[test]]
name = "cidr_quic"
required-features = ["quic-rustls-ring", "cidr"]
