[package]
name = "memberlist-simulation"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Deterministic single-threaded simulation harness for memberlist-machine."

[lib]
# Internal deterministic test-harness crate: doc comments are
# cross-reference prose, not API examples, and the only executable
# example (clock::Clock) is independently covered by the
# `clock_advance_is_monotonic` unit test. Compiling the rustdoc doc
# pass adds zero coverage and is the sole surface that flakes
# `E0463: can't find crate` when `cargo test -p memberlist-simulation`
# runs concurrently with other cargo invocations over the shared
# target dir. Disabling it keeps that authority gate deterministic
# without losing verification.
doctest = false

[features]
# Drives the composed `QuicEndpoint` (memberlist + real quinn-proto) through
# the same virtual clock / fault model as the plain harness. Backend-
# selectable: the SAME conformance suite runs under either crypto backend.
#   `--features quic`                   → ring (default)
#   `--features quic-rustls-aws-lc-rs`  → aws-lc-rs
quic = ["quic-rustls-ring"]
quic-rustls-ring = ["__quic-harness", "memberlist-machine/quic-rustls-ring", "quinn-proto/rustls-ring", "dep:ring"]
quic-rustls-aws-lc-rs = ["__quic-harness", "memberlist-machine/quic-rustls-aws-lc-rs", "quinn-proto/rustls-aws-lc-rs", "dep:aws-lc-rs"]
# Internal: shared non-crypto harness deps + the cfg gate. Do not enable
# directly — pick `quic` (ring) or `quic-rustls-aws-lc-rs`.
__quic-harness = ["dep:quinn-proto", "dep:rustls", "dep:rustls-pki-types", "dep:rcgen", "memberlist-machine/quic", "memberlist-machine/compression-lz4"]

# Drives the composed `TlsEndpoint` (memberlist + real rustls over a
# deterministic virtual TCP) through the same virtual clock / fault model as
# the plain harness. Backend-selectable: the SAME conformance suite runs under
# either crypto backend.
#   `--features tls`                   → ring (default)
#   `--features tls-rustls-aws-lc-rs`  → aws-lc-rs
tls = ["tls-rustls-ring"]
tls-rustls-ring = ["__tls-harness", "memberlist-machine/tls-rustls-ring", "rustls/ring"]
tls-rustls-aws-lc-rs = ["__tls-harness", "memberlist-machine/tls-rustls-aws-lc-rs", "rustls/aws_lc_rs"]
# Internal: shared non-crypto harness deps + the cfg gate. Do not enable
# directly — pick `tls` (ring) or `tls-rustls-aws-lc-rs`.
__tls-harness = ["dep:rustls", "dep:rustls-pki-types", "dep:rcgen", "memberlist-machine/tls", "memberlist-machine/compression-lz4"]

# Drives the composed `TcpEndpoint` (memberlist + per-exchange plain TCP)
# through the same virtual clock / fault model as the TLS harness, without any
# crypto layer. The reliable path is wire-label-gated plain TCP; the
# unreliable path is the same UDP gossip queue.
tcp = ["memberlist-machine/tcp", "memberlist-machine/compression-lz4"]

# Passthrough: expose the machine-level lz4 compression feature at the sim
# boundary so that `--features __sim-encryption-aes-gcm,compression-lz4` gates
# the compound compressed+encrypted conformance tests.
compression-lz4 = ["memberlist-machine/compression-lz4"]

# Internal: encryption backend for the encrypted conformance tests across every
# transport. Not part of the public API. The default-feature sim build still
# pulls no encryption backend, so the standard conformance suite stays
# byte-unchanged. Selecting this feature pulls every transport harness in so a
# single `--features __sim-encryption-aes-gcm` build covers tcp / tls / quic
# encrypted-conformance runs.
__sim-encryption-aes-gcm = ["tcp", "tls", "quic", "memberlist-machine/encryption-aes-gcm"]

[dependencies]
bytes.workspace = true
memberlist-machine = { path = "../memberlist-machine" }
memberlist-wire = { workspace = true, features = ["default"] }
rand.workspace = true
smol_str.workspace = true
# quic-harness-only. The crypto-provider feature on rustls/quinn-proto is
# pulled by whichever backend feature is selected, via quinn-proto.
quinn-proto = { version = "0.11", default-features = false, optional = true }
rustls = { version = "0.23", default-features = false, features = ["std"], optional = true }
rustls-pki-types = { version = "1", default-features = false, optional = true }
ring = { version = "0.17", optional = true }
aws-lc-rs = { version = "1", optional = true }
# Self-signed certs for the quic conformance harness (mirrors the
# memberlist-machine quic crypto tests; sim/test only).
rcgen = { version = "0.14", optional = true }

[dev-dependencies]
proptest = "1"

[lints]
workspace = true
