[package]
name = "memberlist-smoltcp"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
description = "Executor-free no_std memberlist driver over the smoltcp TCP/IP stack."

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["std"]
std = ["memberlist-proto/std", "memberlist-embedded/std", "smoltcp/std"]
alloc = ["memberlist-proto/alloc", "memberlist-embedded/alloc", "smoltcp/alloc"]

# CIDR peer-admission allow-list. A `CidrPolicy` set via `Options::with_cidr_policy`
# filters inbound gossip by datagram source and inbound reliable connections by
# peer address at the transport boundary, AND inbound alives by the peer's
# advertised address at membership admission. no_std+alloc (pulls the heap tier).
cidr = ["alloc", "memberlist-proto/cidr", "memberlist-embedded/cidr"]

# Gossip/reliable-plane compression backends. Each pass-through enables the
# matching machine backend so the driver's `TransformOptions` can carry a
# `CompressionOptions` for that algorithm; without one the algorithm's
# `compress_gossip` falls back to plaintext and the reliable-plane bridge
# cannot pack. lz4 is no_std+alloc; snappy/zstd/brotli are std-only (mirroring
# the machine, so the tier is never silently under-selected on a no_std build).
lz4 = ["memberlist-proto/lz4", "memberlist-embedded/lz4"]
snappy = ["memberlist-proto/snappy", "memberlist-embedded/snappy"]
zstd = ["memberlist-proto/zstd", "memberlist-embedded/zstd"]
brotli = ["memberlist-proto/brotli", "memberlist-embedded/brotli"]

# Gossip-plane (unreliable) checksum backends. Each pass-through enables the
# matching machine backend so the driver's `TransformOptions` can carry a
# `ChecksumOptions` for that algorithm. Checksum is applied only to outbound
# gossip datagrams; the reliable-plane bridge carries no checksum (it relies on
# the stream transport's integrity). All backends are no_std+alloc.
crc32 = ["memberlist-proto/crc32", "memberlist-embedded/crc32"]
xxhash32 = ["memberlist-proto/xxhash32", "memberlist-embedded/xxhash32"]
xxhash64 = ["memberlist-proto/xxhash64", "memberlist-embedded/xxhash64"]
xxhash3 = ["memberlist-proto/xxhash3", "memberlist-embedded/xxhash3"]
murmur3 = ["memberlist-proto/murmur3", "memberlist-embedded/murmur3"]

# Gossip/reliable-plane AEAD encryption backends. Each pass-through enables the
# matching machine backend so a `TransformOptions` carrying a `Keyring` for that
# cipher can actually encrypt; without the backend `encrypt_gossip` returns
# `EncryptionError::UnsupportedAlgorithm` (surfaced at construction by the
# encryption-config probe, so it is never a silent runtime gossip drop). Both
# AEAD backends are no_std+alloc.
aes-gcm = ["memberlist-proto/aes-gcm", "memberlist-embedded/aes-gcm"]
chacha20-poly1305 = [
  "memberlist-proto/chacha20-poly1305",
  "memberlist-embedded/chacha20-poly1305",
]

[dependencies]
memberlist-proto = { workspace = true, default-features = false, features = [
  "tcp",
] }
memberlist-embedded = { workspace = true, default-features = false }
smoltcp = { version = "0.13", default-features = false, features = [
  "alloc",
  "medium-ip",
  "medium-ethernet",
  "proto-ipv4",
  "proto-ipv6",
  "socket-udp",
  "socket-tcp",
] }
getrandom.workspace = true
bytes.workspace = true
hashbrown = { version = "0.17", default-features = false, features = [
  "default-hasher",
] }

[dev-dependencies]
smol_str.workspace = true
# Enable the lz4 + AES-GCM backends for the transform round-trip tests
# (`tests/transform.rs`). Declared on the dev build only so the library's own
# build stays backend-free and the no_std/bare-metal compile checks exercise the
# disabled-transform identity paths.
memberlist-proto = { workspace = true, default-features = false, features = [
  "tcp",
  "lz4",
  "aes-gcm",
] }
