[package]
name = "memberlist-wire"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Buffa-generated wire types + hand-rolled outer framing for the memberlist gossip protocol."

[dependencies]
buffa = { version = "0.5", default-features = false, features = ["std"] }
bytes = { workspace = true, features = ["std"] }
derive_more = { workspace = true, features = ["display", "from", "is_variant", "unwrap", "try_unwrap"] }
nodecraft = { workspace = true, features = ["std"] }
paste = { workspace = true }
smol_str = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
triomphe = { workspace = true, features = ["std"] }
varing = { workspace = true, features = ["std"] }

# Compression backends — opt-in; the default build pulls none of them.
brotli = { version = "8", optional = true }
snap = { version = "1", optional = true }
lz4_flex = { version = "0.13", optional = true }
zstd = { version = "0.13", optional = true }

# AEAD backends — opt-in; the default build pulls neither.
aead = { version = "0.5", features = ["std"], optional = true }
aes-gcm = { version = "0.10", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
rand = { workspace = true, optional = true }

[build-dependencies]
buffa-build = "0.5"

[features]
default = ["std"]
# memberlist-wire is std-only; `alloc` is provided as an alias for `std` so
# the copied data-module cfg-gates compile without modification.
alloc = ["std"]
std = ["buffa/std"]
# Enable nodecraft's hostaddr types (Domain, HostAddr, …) in the Data impls.
hostaddr = ["nodecraft/hostaddr"]

# Compression backends — opt-in; the default build pulls none of them.
lz4 = ["dep:lz4_flex"]
snappy = ["dep:snap"]
zstd = ["dep:zstd"]
brotli = ["dep:brotli"]

# AEAD encryption backends — opt-in; the default build pulls neither.
# The `aead` trait surface and `rand` (random nonces) are pulled in by either.
aes-gcm = ["dep:aead", "dep:aes-gcm", "dep:rand"]
chacha20-poly1305 = ["dep:aead", "dep:chacha20poly1305", "dep:rand"]
