[package]
name = "memberlist"
version = "0.8.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A highly customable, adaptable, async runtime agnostic gossip protocol which helps manage cluster membership and member failure detection."

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["tokio", "crc32", "snappy", "encryption", "dns", "tcp", "quic-rustls-ring", "rayon"]

tokio = ["agnostic/tokio"]
smol = ["agnostic/smol"]

serde = ["memberlist-core/serde"]
metrics = ["memberlist-core/metrics"]
rayon = ["memberlist-core/rayon"]
encryption = ["memberlist-core/encryption"]

lz4 = ["memberlist-core/lz4"]
zstd = ["memberlist-core/zstd"]
snappy = ["memberlist-core/snappy"]
brotli = ["memberlist-core/brotli"]

crc32 = ["memberlist-core/crc32"]
xxhash32 = ["memberlist-core/xxhash32"]
xxhash64 = ["memberlist-core/xxhash64"]
xxhash3 = ["memberlist-core/xxhash3"]
murmur3 = ["memberlist-core/murmur3"]

# `quic` activates the composed QUIC + memberlist Sans-I/O coordinator in
# memberlist-machine (one UDP socket: reliable exchanges ride QUIC bidi
# streams, unreliable gossip rides plain UDP), re-exported as
# `memberlist::machine::QuicEndpoint`. Crypto-backend-agnostic: pick a
# backend pass-through (e.g. `quic-rustls-ring`). The frozen memberlist-net
# / memberlist-quic crates are not a dependency of this crate; they remain
# on disk as read-only reference only.
quic = ["memberlist-machine/quic", "agnostic/quinn"]
quinn = ["quic"]

# quinn-proto crypto-backend pass-throughs (forwarded through
# memberlist-machine).
quic-ring = ["quic", "memberlist-machine/quic-ring"]
quic-rustls = ["quic", "memberlist-machine/quic-rustls"]
quic-rustls-ring = ["quic", "memberlist-machine/quic-rustls-ring"]
quic-aws-lc-rs = ["quic", "memberlist-machine/quic-aws-lc-rs"]
quic-aws-lc-rs-fips = ["quic", "memberlist-machine/quic-aws-lc-rs-fips"]
quic-rustls-aws-lc-rs = ["quic", "memberlist-machine/quic-rustls-aws-lc-rs"]
quic-rustls-aws-lc-rs-fips = ["quic", "memberlist-machine/quic-rustls-aws-lc-rs-fips"]

# quinn-proto auxiliary pass-throughs.
quic-bloom = ["quic", "memberlist-machine/quic-bloom"]
quic-log = ["quic", "memberlist-machine/quic-log"]
quic-rustls-log = ["quic", "memberlist-machine/quic-rustls-log"]
quic-qlog = ["quic", "memberlist-machine/quic-qlog"]
quic-platform-verifier = ["quic", "memberlist-machine/quic-platform-verifier"]

net = ["agnostic/net"]
tcp = ["net"]
tls = ["net", "memberlist-machine/tls", "dep:rustls", "dep:rustls-pki-types"]
tls-rustls-ring = ["tls", "memberlist-machine/tls-rustls-ring"]
tls-rustls-aws-lc-rs = ["tls", "memberlist-machine/tls-rustls-aws-lc-rs"]
tls-rustls-aws-lc-rs-fips = ["tls", "memberlist-machine/tls-rustls-aws-lc-rs-fips"]

# enable DNS node address resolver
dns = ["agnostic/dns", "nodecraft/dns"]

test = ["memberlist-core/test"]

[dependencies]
agnostic-lite.workspace = true
agnostic-io = { workspace = true, features = ["std"] }
agnostic = { workspace = true, optional = true }
memberlist-core.workspace = true
memberlist-machine = { path = "../memberlist-machine" }
memberlist-wire = { workspace = true, features = ["default"] }
thiserror = { workspace = true }
nodecraft.workspace = true
smol_str.workspace = true
tracing.workspace = true

# Direct deps for the umbrella driver code.
async-lock.workspace = true
async-channel.workspace = true
bytes.workspace = true
futures.workspace = true
# `std` (provider-free: webpki/std + pki-types/std + once_cell/std) is
# required for the buffered `ServerConnection`/`ClientConnection` types and
# the `std::error::Error` impl on `rustls::Error` that `tls.rs` composes. A
# crypto provider (ring / aws-lc-rs) is a separate feature, not pulled here.
rustls = { version = "0.23", default-features = false, features = ["std"], optional = true }
rustls-pki-types = { version = "1", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
paste.workspace = true
# Integration tests only. `rcgen` mints the QUIC
# self-signed cert. `rustls` is re-listed here with the `ring` feature so
# the integration-test crate can name `rustls::crypto::ring` directly: the
# library's own `rustls` dep is `default-features = false, features =
# ["std"]` (provider-free on purpose), so the `ring` *module* would not be
# reachable from the test crate without this dev-dep. Dev-deps do not
# affect the published library.
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }

[[test]]
name = "memberlist"
path = "tests/main.rs"
required-features = ["test"]

